--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "compile-client": "webpack --mode development"
   },
   "devDependencies": {
+    "@types/antd": "^1.0.0",
     "@types/express": "4.17.21",
     "@types/node": "20.2.5",
     "@types/react": "18.2.57",
     "@types/react-dom": "18.2.19",
-    "@types/antd": "^1.0.0",
     "npm-parallel": "^2.0.1",
     "ts-loader": "9.4.3",
     "ts-node": "10.9.2",
@@ -25,6 +25,7 @@
     "nullthrows": "1.1.1",
     "prettier": "^3.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-fetch-hook": "^1.9.5"
   }
 }
