--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prettier": "3.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-fetch-hook": "1.9.5"
+    "react-fetch-hook": "1.9.5",
+    "styled-components": "6.1.8"
   }
 }
