--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "webpack-cli": "5.1.1"
   },
   "dependencies": {
+    "@types/react-router-dom": "5.3.3",
     "antd": "5.14.1",
     "express": "4.18.2",
     "nullthrows": "1.1.1",
@@ -27,6 +28,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-fetch-hook": "1.9.5",
+    "react-router-dom": "6.22.1",
     "styled-components": "6.1.8"
   }
 }
