--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "@types/react-router-dom": "5.3.3",
     "antd": "5.14.1",
     "express": "4.18.2",
+    "mysql": "2.18.1",
     "nullthrows": "1.1.1",
     "prettier": "3.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-fetch-hook": "1.9.5",
     "react-router-dom": "6.22.1",
-    "styled-components": "6.1.8"
+    "reflect-metadata": "0.2.1",
+    "styled-components": "6.1.8",
+    "typeorm": "0.3.20"
   }
 }
