--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "webpack-cli": "5.1.1"
   },
   "dependencies": {
+    "@types/bcrypt": "5.0.2",
     "@types/react-router-dom": "5.3.3",
     "antd": "5.14.1",
+    "axios": "1.6.7",
+    "bcrypt": "5.1.1",
     "express": "4.18.2",
     "mysql": "2.18.1",
     "nullthrows": "1.1.1",
