--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-router-dom": "6.22.1",
     "reflect-metadata": "0.2.1",
     "styled-components": "6.1.8",
+    "typed-rpc": "5.0.1",
     "typeorm": "0.3.20"
   }
 }
