--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "webpack-cli": "5.1.1"
   },
   "dependencies": {
-    "@tanstack/react-query": "5.24.8",
+    "@tanstack/react-query": "^4.19.1",
     "@types/bcrypt": "5.0.2",
     "@types/express-session": "1.18.0",
     "@types/react-router-dom": "5.3.3",
@@ -33,6 +33,7 @@
     "nullthrows": "1.1.1",
     "prettier": "3.2.5",
     "react": "18.2.0",
+    "react-api-query": "2.2.4",
     "react-dom": "18.2.0",
     "react-router-dom": "6.22.1",
     "reflect-metadata": "0.2.1",
