--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "webpack-cli": "5.1.1"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.19.1",
     "@types/bcrypt": "5.0.2",
     "@types/express-session": "1.18.0",
     "@types/react-router-dom": "5.3.3",
     "antd": "5.14.1",
-    "axios": "1.6.7",
     "bcrypt": "5.1.1",
     "express": "^4.18.2",
     "express-session": "1.18.0",
@@ -32,10 +32,12 @@
     "nullthrows": "1.1.1",
     "prettier": "3.2.5",
     "react": "18.2.0",
+    "react-api-query": "2.2.4",
     "react-dom": "18.2.0",
     "react-router-dom": "6.22.1",
     "reflect-metadata": "0.2.1",
     "styled-components": "6.1.8",
+    "typed-rpc": "5.0.1",
     "typeorm": "0.3.20"
   }
 }
