--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,13 @@
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.foldingImportsByDefault": true,
 
+  "files.exclude": {
+    "node_modules": true,
+    "**/package-lock.json": true,
+    "**/tsconfig.json": true,
+    "**.config.js": true
+  },
+
   "editor.codeActionsOnSave": {
     "source.organizeImports": "always"
   }
