--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.57",
     "@types/react-dom": "18.2.19",
+    "@types/bcrypt": "5.0.2",
+    "@types/express-session": "1.18.0",
+    "@types/react-router-dom": "5.3.3",
     "npm-parallel": "2.0.1",
     "ts-loader": "9.4.3",
     "ts-node": "10.9.2",
@@ -20,11 +23,10 @@
     "webpack-cli": "5.1.1"
   },
   "dependencies": {
+    "@react-oauth/google": "0.12.1",
     "@tanstack/react-query": "5.0.0-rc.4",
-    "@types/bcrypt": "5.0.2",
-    "@types/express-session": "1.18.0",
-    "@types/react-router-dom": "5.3.3",
     "antd": "5.14.1",
+    "axios": "1.6.7",
     "bcrypt": "5.1.1",
     "express": "^4.18.2",
     "express-session": "1.18.0",
