--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
   "scripts": {
     "dev": "parallel start-server watch-client",
+    "lint": "eslint src/** --fix",
     "start-server": "ts-node src/server/server.tsx",
-    "watch-client": "webpack --mode development --watch",
-    "compile-client": "webpack --mode development"
+    "compile-client": "webpack --mode development",
+    "watch-client": "webpack --mode development --watch"
   },
   "devDependencies": {
     "@types/antd": "1.0.0",
+    "@types/bcrypt": "5.0.2",
     "@types/express": "4.17.21",
+    "@types/express-session": "1.18.0",
     "@types/node": "20.2.5",
     "@types/react": "18.2.57",
     "@types/react-dom": "18.2.19",
-    "@types/bcrypt": "5.0.2",
-    "@types/express-session": "1.18.0",
     "@types/react-router-dom": "5.3.3",
+    "@typescript-eslint/eslint-plugin": "7.2.0",
+    "@typescript-eslint/parser": "7.2.0",
+    "eslint": "8.57.0",
+    "eslint-plugin-react": "7.34.0",
     "npm-parallel": "2.0.1",
     "ts-loader": "9.4.3",
     "ts-node": "10.9.2",
