--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "node_modules": true,
     "**/package-lock.json": true,
     "**/tsconfig.json": true,
+    "**/.eslintrc.js": true,
     "**.config.js": true
   },
 
