--- a/.gitignore
+++ b/.gitignore
@@ -78,7 +78,7 @@ web_modules/
 .yarn-integrity
 
 # dotenv environment variable files
-.env
+# .env # Temporarily disable
 .env.development.local
 .env.test.local
 .env.production.local
