--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "scripts": {
     "dev": "parallel start-server watch-client",
-    "lint": "eslint src/** --fix",
-    "start-server": "ts-node src/server/server.tsx",
+    "lint": "eslint ./src/** --fix",
+    "start-server": "ts-node ./src/server/server.tsx",
     "compile-client": "webpack --mode development",
     "watch-client": "webpack --mode development --watch"
   },
@@ -28,11 +28,13 @@
     "webpack-cli": "5.1.1"
   },
   "dependencies": {
+    "@google-cloud/storage": "7.8.0",
     "@react-oauth/google": "0.12.1",
     "@tanstack/react-query": "5.0.0-rc.4",
     "antd": "5.14.1",
     "axios": "1.6.7",
     "bcrypt": "5.1.1",
+    "dotenv": "16.4.5",
     "express": "^4.18.2",
     "express-session": "1.18.0",
     "mysql": "2.18.1",
