--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@react-oauth/google": "0.12.1",
     "@tanstack/react-query": "5.0.0-rc.4",
     "antd": "5.14.1",
+    "antd-img-crop": "4.21.0",
     "axios": "1.6.7",
     "bcrypt": "5.1.1",
     "express": "^4.18.2",
@@ -42,6 +43,7 @@
     "react-dom": "18.2.0",
     "react-router-dom": "6.22.1",
     "reflect-metadata": "0.2.1",
+    "sharp": "0.33.2",
     "styled-components": "6.1.8",
     "typed-rpc": "5.0.1",
     "typeorm": "0.3.20"
