--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@react-oauth/google": "0.12.1",
     "@tanstack/react-query": "5.0.0-rc.4",
     "antd": "5.14.1",
+    "antd-img-crop": "4.21.0",
     "axios": "1.6.7",
     "bcrypt": "5.1.1",
     "express": "^4.18.2",
