--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "scripts": {
-    "dev": "parallel start-server watch-client",
-    "lint": "eslint src/** --fix",
-    "start-server": "ts-node src/server/server.tsx",
-    "compile-client": "webpack --mode development",
-    "watch-client": "webpack --mode development --watch"
+    "dev": "parallel server client:watch",
+    "dev:clean": "parallel server:clean client:watch",
+    "server": "ts-node src/server/server.tsx",
+    "server:clean": "ts-node src/server/server.tsx --clean",
+    "client": "webpack --mode development",
+    "client:watch": "webpack --mode development --watch",
+    "lint": "eslint src/** --fix"
   },
   "devDependencies": {
     "@types/antd": "1.0.0",
@@ -36,6 +38,7 @@
     "bcrypt": "5.1.1",
     "express": "^4.18.2",
     "express-session": "1.18.0",
+    "fakerator": "0.3.6",
     "mysql": "2.18.1",
     "nullthrows": "1.1.1",
     "prettier": "3.2.5",
