Replace webpack with esbuild

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "scripts": {
-    "dev": "parallel server client:watch",
-    "dev:clean": "parallel server:clean client:watch",
+    "dev": "parallel server client:dev",
+    "dev:clean": "parallel server:clean client:dev",
     "server": "ts-node src/server/server.tsx",
     "server:clean": "ts-node src/server/server.tsx --clean",
-    "client": "webpack --mode development",
-    "client:watch": "webpack --mode development --watch",
+    "client:prod": "esbuild src/client/client.tsx --bundle --outfile=public/js/bundle.js",
+    "client:dev": "esbuild src/client/client.tsx --bundle --outdir=public/js --watch",
     "lint": "eslint src/** --fix"
   },
   "devDependencies": {
@@ -19,15 +19,14 @@
     "@types/react-router-dom": "5.3.3",
     "@typescript-eslint/eslint-plugin": "7.2.0",
     "@typescript-eslint/parser": "7.2.0",
+    "esbuild": "0.20.2",
     "eslint": "8.57.0",
     "eslint-plugin-react": "7.34.0",
     "npm-parallel": "2.0.1",
     "ts-loader": "9.4.3",
     "ts-node": "10.9.2",
     "ts-node-dev": "2.0.0",
-    "typescript": "5.3.3",
-    "webpack": "5.84.1",
-    "webpack-cli": "5.1.1"
+    "typescript": "5.3.3"
   },
   "dependencies": {
     "@react-oauth/google": "0.12.1",
