--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "reflect-metadata": "0.2.1",
     "styled-components": "6.1.8",
     "typed-rpc": "5.0.1",
-    "typeorm": "0.3.20"
+    "typeorm": "0.3.20",
+    "usehooks-ts": "3.0.2"
   }
 }
