--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "server:clean": "ts-node src/server/server.tsx --clean",
     "client:prod": "esbuild src/client/client.tsx --bundle --outdir=public/js --minify",
     "client:dev": "esbuild src/client/client.tsx --bundle --outdir=public/js --watch --sourcemap",
-    "lint": "eslint src/** --fix"
+    "lint": "eslint src/** --fix",
+    "build": "npm run client:prod",
+    "start": "npm run server"
   },
   "devDependencies": {
     "@types/antd": "1.0.0",
