--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "typescript": "5.3.3"
   },
   "dependencies": {
+    "@azure-rest/ai-translation-text": "^1.0.0-beta.1",
     "@react-oauth/google": "0.12.1",
     "@tanstack/react-query": "5.0.0-rc.4",
     "antd": "5.14.1",
