--- a/package.json
+++ b/package.json
@@ -33,13 +33,16 @@
   "dependencies": {
     "@react-oauth/google": "0.12.1",
     "@tanstack/react-query": "5.0.0-rc.4",
+    "@types/language-name-map": "0.3.3",
     "antd": "5.14.1",
     "antd-img-crop": "4.21.0",
     "axios": "1.6.7",
     "bcrypt": "5.1.1",
+    "dotenv": "16.4.5",
     "express": "^4.18.2",
     "express-session": "1.18.0",
     "fakerator": "0.3.6",
+    "language-name-map": "0.3.0",
     "mysql": "2.18.1",
     "nullthrows": "1.1.1",
     "prettier": "3.2.5",
